feat: wip, fetch messages
