# api/docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /api
 definitions:
+  api.FetchMessagesRequest:
+    properties:
+      ids:
+        description: 消息ID列表
+        example:
+        - "123456789"
+        - "987654321"
+        items:
+          type: string
+        type: array
+    required:
+    - ids
+    type: object
   api.ForwardMessagesRequest:
     properties:
       from_chat_id:
@@ -194,6 +207,39 @@ definitions:
         type: string
       watching:
         type: boolean
+    type: object
+  types.SearchHit:
+    properties:
+      _formatted:
+        properties:
+          chat_id:
+            type: string
+          id:
+            type: string
+          message:
+            type: string
+          timestamp:
+            type: string
+          type:
+            type: string
+          user_id:
+            type: string
+        type: object
+      chat_id:
+        type: integer
+      id:
+        description: Telegram MessageID
+        type: integer
+      message:
+        description: The original text of the message
+        type: string
+      timestamp:
+        type: integer
+      type:
+        type: integer
+      user_id:
+        description: The ID of the user who sent the message
+        type: integer
     type: object
 info:
   contact: {}
@@ -442,6 +488,66 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 获取指定聊天的索引信息
+      tags:
+      - Chat
+  /index/{chat_id}/msgs/fetch:
+    post:
+      consumes:
+      - application/json
+      description: 根据消息ID列表从索引中获取消息内容
+      parameters:
+      - description: 聊天ID
+        in: path
+        name: chat_id
+        required: true
+        type: integer
+      - description: 请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.FetchMessagesRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功响应示例
+          schema:
+            properties:
+              messages:
+                items:
+                  $ref: '#/definitions/types.SearchHit'
+                type: array
+              status:
+                type: string
+            type: object
+        "400":
+          description: 请求参数错误
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: 未授权
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: 未找到指定聊天的索引
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 服务器内部错误
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 从索引中获取指定消息
       tags:
       - Chat
   /index/{chat_id}/search:
